@@ -16,6 +16,7 @@ Changelog
  * Fix: Draftail now supports features specified via the `WAGTAILADMIN_RICH_TEXT_EDITORS` setting (Todd Dembrey)
  * Fix: Password reset form no longer indicates whether the email is recognised, as per standard Django behaviour (Bertrand Bordage)
  * Fix: `UserAttributeSimilarityValidator` is now correctly enforced on user creation / editing forms (Tim Heap)
+ * Fix: Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
 
 
 2.0.1 (xx.xx.xxxx) - IN DEVELOPMENT
